manifest/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lm-eval-via-webui
spec:
  ports:
  - name: https
    port: 443
    protocol: TCP
    targetPort: 8080
  selector:
    app: lm-eval
