manifest/base/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: lm-eval-webui-route
spec:
  host: lm-eval-webui-route-lm-eval.hostname
  port:
    targetPort: https
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: lm-eval-via-webui
    weight: 100
  wildcardPolicy: None
